- Add notify - Fix login form width on mobile

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,3 +1,3 @@
 .login-form {
-    @apply w-[366px] p-[15px] box-border rounded border-[2px] border-[#C8D1DC] m-auto flex flex-col gap-[15px];
+    @apply w-full sm:w-[366px] p-[15px] box-border rounded border-[2px] border-[#C8D1DC] m-auto flex flex-col gap-[15px];
 }
